force-app/main/default/objects/LLC_BI__Credit_Memo__c/fields/LLC_BI__Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Description__c</fullName>
    <description>This field is optional. It is populated by an administrator. The value of this field is displayed on the Credit Memo selection page and should be used to help the user choose the appropriate template.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>