force-app/main/default/objects/LLC_BI__Credit_Memo__c/fields/LLC_BI__FScreen__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__FScreen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required. It is populated when the credit memo is created from template. This field is a lookup to the Force framework Screen record, which is a parent of Screen Sections that make up the credit memo.</description>
    <label>Force Screen</label>
    <referenceTo>nFORCE__Screen__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>