force-app/main/default/objects/LLC_BI__Credit_Memo__c/fields/LLC_BI__Is_Disabled__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It defaults to false and can be updated by administrator. When set to true, the disabled credit memo template will not be shown on the Credit Memo selection page. This field should only be used for credit memo records that are templates.</description>
    <inlineHelpText>Disabled credit memo templates will not be shown on the Credit Memo selection page.</inlineHelpText>
    <label>Is Disabled</label>
    <type>Checkbox</type>
</CustomField>