force-app/main/default/objects/LLC_BI__Credit_Memo__c/fields/LLC_BI__Is_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Template__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is optional. It defaults to false and when set to to true, it indicates the record is a template. When set to true, the credit memo will appear as a template option on the Credit Memo selection page.</description>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>