force-app/main/default/objects/LLC_BI__Credit_Memo__c/fields/LLC_BI__Screen__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Screen__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is no longer used.</description>
    <label>Screen</label>
    <referenceTo>nDESIGN__Screen__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>